--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "3dfolio",
   "private": true,
-  "homepage": "https://aryankhatana01.github.io",
+  "homepage": "https://aryankhatana01.github.io/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -b main -d build",
+    "predeploy": "vite build",
+    "deploy": "gh-pages -d build",
     "preview": "vite preview"
   },
   "dependencies": {
